fix: added overflow hidden in the page module

--- a/src/components/structures/Page/page.module.css
+++ b/src/components/structures/Page/page.module.css
@@ -4,6 +4,7 @@
 
   position: relative;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .main {
@@ -57,10 +58,7 @@
 
 .side-nav-backdrop {
   position: fixed;
-  top: 0;
-  right: 100%;
-  bottom: 0;
-  left: 0;
+  inset: 0 100% 0 0;
   display: block;
   background: var(--ye-color-black-50);
 }
@@ -111,7 +109,7 @@
 .spacer {
   position: absolute;
   top: 0;
-  z-index: -1;
+  z-index: calc(var(--z-index-base) * -1);
   width: 100%;
   height: 0;
 }
